influxdb3-plugin-cli/tests/snapshots/cross_cutting__help_index.snap
---
source: influxdb3-plugin-cli/tests/cross_cutting.rs
expression: stdout
---
Inspect a local plugin registry index

Usage: influxdb3-plugin index <COMMAND>

Commands:
  search  Search plugins in a local registry index
  info    Inspect one plugin in a local registry index
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
