influxdb3-plugin-cli/tests/snapshots/cross_cutting__help_new.snap
---
source: influxdb3-plugin-cli/tests/cross_cutting.rs
assertion_line: 210
expression: stdout
---
Scaffold a new plugin or registry from a built-in template

Usage: influxdb3-plugin new <TEMPLATE> [PATH] [OPTIONS]
       influxdb3-plugin new list [OPTIONS]

Commands:
  list  List available templates
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Run `influxdb3-plugin new list` to see available templates, or `influxdb3-plugin new <template> --help` for per-template options.
