influxdb3-plugin-cli/tests/snapshots/cross_cutting__help_package.snap
---
source: influxdb3-plugin-cli/tests/cross_cutting.rs
expression: stdout
---
Validate, archive, hash, and emit a derived index entry

Usage: influxdb3-plugin package [OPTIONS] --index <INDEX> --out <OUT> [PLUGIN_DIR]

Arguments:
  [PLUGIN_DIR]
          Plugin directory to package. Defaults to the current working directory
          
          [default: .]

Options:
      --output <OUTPUT>
          Output format. Auto-detected from stdout's TTY status and `CI` when omitted

          Possible values:
          - human: Colorized, human-readable rendering. Default on TTY
          - json:  Machine-readable JSON on stdout. Default in CI / when stdout is not a terminal

      --index <INDEX>
          Input registry index (read-only). The derived index (input + new entry appended) is written to `--out/index.json`

      --out <OUT>
          Output directory. Receives the derived `index.json` and the new `<name>-<version>.tar.gz` artifact. Created if missing. Must NOT resolve to the directory containing `--index`

  -h, --help
          Print help (see a summary with '-h')
