influxdb3-plugin-cli/tests/snapshots/cross_cutting__help_top.snap
---
source: influxdb3-plugin-cli/tests/cross_cutting.rs
expression: stdout
---
Author-side tooling for InfluxDB 3 plugins.

Usage: influxdb3-plugin <COMMAND>

Commands:
  new       Scaffold a new plugin or registry from a built-in template
  validate  Validate a plugin directory
  package   Validate, archive, hash, and emit a derived index entry
  yank      Toggle the `yanked` flag on an existing index entry
  help      Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version
