influxdb3-plugin-cli/tests/snapshots/cross_cutting__help_validate.snap
---
source: influxdb3-plugin-cli/tests/cross_cutting.rs
expression: stdout
---
Validate a plugin directory

Usage: influxdb3-plugin validate [OPTIONS] [PLUGIN_DIR]

Arguments:
  [PLUGIN_DIR]
          Plugin directory to validate. Defaults to the current working directory
          
          [default: .]

Options:
      --output <OUTPUT>
          Output format. Auto-detected from stdout's TTY status and `CI` when omitted (Spec 2 § S2-14)

          Possible values:
          - human: Colorized, human-readable rendering. Default on TTY
          - json:  Machine-readable JSON on stdout per Spec 2 S2-15. Default in CI / when stdout is not a terminal

      --index <INDEX>
          Optional index JSON to check `(name, version)` uniqueness against (S2-2). When omitted, uniqueness is not checked

  -h, --help
          Print help (see a summary with '-h')
